# advent_of_code_2017

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.cmake  build.sh  gcov.cmake  generate_templates.sh  gt.sh  project_name
data/: .input_08_instruction_set.txt.swp  input_05_twisty_trampolines.txt
docs/: 01_Inverse_Captcha.md  02_Checksum_Corruption.md  02_checksum_corruption.md  03_Spiral_Memory.md  04_High_Entropy_Passphrases.md  05_Maze_of_Twisty_Trampolines.md  06_Memory_Reallocation.md  07_Recursive_Circus.md  08_I_Heard_You_Like_Registers.md  09_Stream_Processing.md  10_Knot_Hash.md  11_Hex_Ed.md  12_Digital_Plumber.md  13_Packet_Scanners.md  14_Disk_Defragmentation.md  15_Dueling_Generators.md  16_Permutation_Promenade.md  17_Spinlock.md  18_Duet.md  19_A_Series_of_Tubes.md  20_Particle_Swarm.md  21_.md  22_.md  23_.md  24_.md  25_.md
include/: 01_circular_sum.h  01_inverse_captcha.hpp  02_corruption_checksum.hpp  03_spiral_memory.hpp  04_.hpp  04_high_entropy_passphrase.hpp  05_.hpp  05_twisty_trampolines.hpp  06_.hpp  06_memory_reallocation.hpp  07_.hpp  07_recursive_circus.hpp  08_.hpp  08_instruction_set.hpp  09_.hpp  09_stream_processing.hpp  10_.hpp  11_.hpp  12_.hpp  13_.hpp  14_.hpp  15_.hpp  16_.hpp  17_.hpp  18_.hpp  19_.hpp  20_.hpp  21_.hpp  22_.hpp  23_.hpp  24_.hpp  25_.hpp  instruction_set.hpp
src/: 01_circular_sum.cpp  01_inverse_captcha.cpp  02_corruption_checksum.cpp  03_spiral_memory.cpp  04_.cpp  04_high_entropy_passphrase.cpp  05_.cpp  05_twisty_trampolines.cpp  06_.cpp  06_memory_reallocation.cpp  07_.cpp  07_recursive_circus.cpp  08_.cpp  08_instruction_set.cpp  09_.cpp  09_stream_processing.cpp  10_.cpp  11_.cpp  12_.cpp  13_.cpp  14_.cpp  15_.cpp  16_.cpp  17_.cpp  18_.cpp  19_.cpp  20_.cpp  21_.cpp  22_.cpp  23_.cpp  24_.cpp  25_.cpp  instruction_set.cpp
test/: test_01_circular_sum.cpp  test_01_inverse_captcha.cpp  test_02_corruption_checksum.cpp  test_03_spiral_memory.cpp  test_04_.cpp  test_04_high_entropy_passphrase.cpp  test_05_.cpp  test_05_twisty_trampolines.cpp  test_06_.cpp  test_06_06_memory_reallocation.cpp  test_06_memory_reallocation.cpp  test_07_.cpp  test_08_.cpp  (+21 more)
(+1 files in other folders)
